# Model-Distillation-Agentic-Workflow

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  env.template  main.py  pyproject.toml  requirements.txt  setup.py
config/: agent_config.json  distillation_config.json
data/: business_simulation.csv
examples/: complete_pipeline.py  custom_data_example.py  quickstart.py
notebooks/: data_prep_exploreTabPFN_foundation_model.ipynb  model_distillation.ipynb  what_if_analysis.ipynb
scripts/: REAMDME.md  agent.py  app.py  prediction_utils.py  tools.py  utils.py
src/: __init__.py
src/agentic_workflow/: __init__.py  agent.py
src/data/: __init__.py  data_preparation.py
src/distillation/: __init__.py  distiller.py
tests/: test_basic.py
