[project]
name = "model-distillation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fairlearn>=0.13.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.2",
    "mcp[cli]>=1.18.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "streamlit>=1.51.0",
    "tabpfn>=2.2.1",
]
